[gd_scene load_steps=3 format=3 uid="uid://r51wimef8fq"]

[ext_resource type="Script" uid="uid://cbgkm2timnth3" path="res://scenes/name_entry.gd" id="1_n861w"]
[ext_resource type="Theme" uid="uid://bdhp2uvk0sxwp" path="res://themes/war_theme.tres" id="2_k6t4k"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n861w")

[node name="Panel_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k6t4k")

[node name="Button_Back" type="Button" parent="Panel_Background"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 47.0
focus_mode = 0
text = "BACK"

[node name="Button_Accept" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 0.5
offset_right = 64.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "ACCEPT"

[node name="LineEdit" type="LineEdit" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -88.0
offset_right = 256.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k6t4k")
placeholder_text = "Enter a name..."
alignment = 1
max_length = 128

[node name="Label" type="Label" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 160.0
offset_right = 133.0
offset_bottom = 194.0
grow_horizontal = 2
theme = ExtResource("2_k6t4k")
theme_type_variation = &"HeaderLarge"
text = "PROFILE CREATION"

[connection signal="pressed" from="Panel_Background/Button_Back" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Accept" to="." method="_on_button_accept_pressed"]
